[package]
name = "somm_proto"
version = "9.0.0"
authors = ["PeggyJV"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13"
prost-types = "0.13"
bytes = "1"
cosmos-sdk-proto = "0.26.1"
tonic = "0.12"
serde = "1.0"
